...
    
    /// Configure `Username TextView`
    private func configureUsernameTextField() {
        usernameTextField.text = "mor_2314"
        usernameTextField.autocorrectionType = .no
        usernameTextField.clearButtonMode = .whileEditing
        usernameTextField.accessibilityIdentifier = "usernameTextFieldIdentifier"
        usernameTextField.font = FontSans(fontSansType: .regular, fontSize: 14).set()
    }
    
    /// Configure `Password textView`
    private func configurePasswordLabel() {
        passwordLabel.text = TextView.password
...
        loginButton.tintColor = .white
        loginButton.layer.cornerRadius = 8
        loginButton.backgroundColor = .systemBlue
        loginButton.setTitleColor(.white, for: .normal)
        loginButton.setAttributedTitle(attributes, for: .normal)
        loginButton.addTarget(self, action: #selector(loginButtonTapped), for: .touchUpInside)
        loginButton.accessibilityIdentifier = "loginButtonIdentifier"
    }
    
    /// Configure `Register Label`
    private func configureAlreadHasAccountLabel() {
        let text = NSMutableAttributedString(string: LoginString.dontHaveAccount)
        text.addAttribute(
...
